--- a/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
+++ b/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
@@ -1,8 +1,24 @@
-<div class="w-full h-full p-5">
-  <div class="border-t-0 border-r-0 border-l-0 border box1">
-    <img src="../assets/images/pollster-panel/pollster-panel-name.svg" width="350" height="250" class="" alt="" />
+<div class="w-full h-full p-2">
+  <div class="border-t-0 border-r-0 border-l-0 border box1 items-center h-16">
+    <div class="inline-flex justify-between w-full">
+        <div class="items-center flex">
+          <img src="../assets/images/pollster-panel/pollster-panel-name.svg" width="250" height="55" class="" alt="" />
+        </div>
+
+        <div class="items-center w-1/6">
+          <div class="clock flex-row justify-end">
+            <div class="">
+              <span class="date row">{{ currentDateTrasformed }}</span>
+            </div>
+            <div class="justify-end">
+              <span class="time h-4">{{ timeActual }}</span>
+            </div>
+          </div>
+      </div>
+    </div>
   </div>
   <div class="flex flex-row pt-4 w-4/6 justify-between">
-   <inq-inquiries class="w-1/5 h-full"></inq-inquiries><inq-tables class="w-1/5 h-full"> </inq-tables><inq-charts class="w-1/5 h-full"> </inq-charts>
+    <inq-inquiries class="w-1/5 h-full"></inq-inquiries><inq-tables class="w-1/5 h-full"> </inq-tables
+    ><inq-charts class="w-1/5 h-full"> </inq-charts>
   </div>
 </div>
