--- a/src/app/features/shared-components/login/login.component.css
+++ b/src/app/features/shared-components/login/login.component.css
@@ -10,7 +10,7 @@ mat-card {
   height: 400px;
   background: rgb(255, 255, 255);
   border-radius: 15px;
-  background-color: rgb(70, 70, 70);
+  background-color: #454545;
   box-shadow: rgba(136, 136, 136, 0.561) 0px 10px 60px 20px;
 }
 .settingPageCard {
