--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: Roboto, sans-serif;
+  font-family: "Questrial", sans-serif;
   overflow: hidden;
 }
 
