--- a/src/app/features/shared-components/register/register.component.css
+++ b/src/app/features/shared-components/register/register.component.css
@@ -9,6 +9,7 @@
   margin-top: 10px;
   font-size: 14px;
   color: black;
+ 
 }
 
 .container {
@@ -151,4 +152,10 @@ abbr {
   align-items: center;
   justify-content: center;
   align-content: center;
+}
+
+
+.input_border{
+  border: 1px solid;
+  border-color: coral;
 }
