--- a/src/app/features/pollster-panel/components/inquiry-form/inquiry-form/inquiry-form.component.css
+++ b/src/app/features/pollster-panel/components/inquiry-form/inquiry-form/inquiry-form.component.css
@@ -4,7 +4,8 @@
 } */
 
 .box{
-  background-color: #454545;
+  background: rgb(255, 255, 255);
+    background: linear-gradient(275deg, rgba(255, 255, 255, 1) 19%, rgba(222, 226, 230, 1) 73%);
 }
 
 .placeholder-style::placeholder {
