--- a/src/app/features/pollster-panel/components/question/question.component.html
+++ b/src/app/features/pollster-panel/components/question/question.component.html
@@ -1,48 +1,59 @@
 @if (isViewed) {
   <form [formGroup]="form">
     <div formArrayName="{{ inquiryFormName.QUESTIONS }}">
-      <div [formGroupName]="itemIndex">
-        <div class="w-full flex items-center align-middle mt-4">
-          <div class="w-1/6 flex justify-center">
-            <span class="text-white">Question no. {{ itemIndex + 1 }}</span>
-          </div>
-          <div class="w-5/6 inline-flex justify-center">
+      <div [formGroupName]="itemIndex" class="w-full inline-flex">
+        <div class="w-1/12 h-12 flex items-center">
+          <span class="text-gray-500 align-middle flex h-5">no. {{ itemIndex + 1 }}</span>
+        </div>
+        <div class="w-4/5 h-full mr-2">
+          <div class="inline-block w-full">
             <textarea
               type="textarea"
-              style="resize: none; align-items: center; display: flex; align-content: center"
-              #area
+              style="resize: none"
+              #areaQuestion
               placeholder="Question"
               maxlength="350"
               matInput
-              class="w-5/6 h-10 text_area leading-tight focus:border-none text-white font-normal text-center bg-gray-700 rounded-md  shadow text-sm"
+              class="w-full bg-gray-100 text_area rounded-md focus:border-0"
               formControlName="{{ shortTextQuestionFormName.QUESTION }}"
               matInput
             ></textarea>
-            <div class="w-24 justify-center flex">
-              <span class="text-normal text-white items-center flex">
-                {{ 350 - area.value.length + '/' + 350 }}
-              </span>
-            </div>
           </div>
-
-          <button
-            class="h-9 hover:bg-red-600 rounded w-44 text-white cursor-pointer text-normal bg-red-500"
-            type="submit"
-            (click)="removeQuestion()"
-          >
-            Remove question
-          </button>
-          <!-- <mat-form-field appearance="outline" class="answer_input_width" ngDefaultControl>
-          <input matInput type="text" />
-        </mat-form-field>
-        <mat-label class="mt-5">Text of the Answer</mat-label>
-        <input
-          class="box1 placeholder-style w-48 border-t border-b border-r border-l input_border leading-tight focus:outline-none text-white font-normal text-center bg-gray-500 rounded-md h-9"
-          type="text"
-          placeholder="Login name *"
-          aria-label="Login name"
-          formControlName="{{ shortTextQuestionFormName.ANSWER }}"
-        /> -->
+          <div class="justify-end flex">
+            <span class="text-xs text-gray-500 items-center flex">
+              {{ 350 - areaQuestion.value.length + '/' + 350 }}
+            </span>
+          </div>
+        </div>
+        <div class="w-4/6 h-full ml-2">
+          <div class="inline-block w-full justify-end">
+            <textarea
+              type="textarea"
+              style="resize: none"
+              #areaAnswer
+              placeholder="Answer"
+              maxlength="350"
+              matInput
+              class="w-full h-10 bg-gray-200 text_area rounded-md focus:border-0 ml-1"
+              formControlName="{{ shortTextQuestionFormName.ANSWER }}"
+              matInput
+            ></textarea>
+          </div>
+          <div class="w-22 justify-end flex">
+            <span class="text-xs text-gray-500 items-center flex">
+              {{ 350 - areaAnswer.value.length + '/' + 350 }}
+            </span>
+          </div>
+        </div>
+        <div class="w-1/6 ml-2 inline-flex items-center h-14">
+            <button
+              style="width: 130px"
+              class="h-7 hover:bg-red-500 rounded-md text-white cursor-pointer text-sm bg-red-200 shadow-2xl"
+              type="submit"
+              (click)="removeQuestion()"
+            >
+              Remove ques.
+            </button>
         </div>
       </div>
     </div>
