remove encapsulatin,change width of matdialog

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,6 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
-
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 body,
 html {
@@ -13,8 +11,6 @@ html {
   font-family: "Questrial", sans-serif;
   overflow: hidden;
 }
-
-
 
 :root {
   /* Colors: */
@@ -28,7 +24,6 @@ html {
   --tableThree-color-cfdae9: #cfdae9;
   --tableFour-color-edf1f7: #edf1f7;
   --tableTitle-color-7699bb: #7699bb;
-  
 }
 
 .custom-container mat-dialog-container {
@@ -38,7 +33,7 @@ html {
   height: 450px;
 }
 
-.inquiry_form{
+.inquiry_form {
   background: rgb(221, 219, 219);
   background: rgba(126, 125, 125, 0.678); /* Black background with 0.5 opacity */
 }
@@ -51,36 +46,49 @@ html {
   background-color: rgb(55, 65, 81);
   border-radius: 5px;
   width: 195px;
-  border:  1x solid;
-  
+  border: 1x solid;
+
   border-color: coral;
   overflow-y: hidden;
 }
 
-.mat-mdc-input-element.text_area  {
+.mat-mdc-input-element.text_area {
   display: flex;
-  border: 1px solid;
-  border-color:black;
- text-align: start;
- padding-left: 10px;
+  text-align: start;
+  height: 58px;
+  padding-left: 10px;
+  color: black;
+  font-size: 15px;
+}
+
+.mat-mdc-input-element.text_area:focus {
+  display: flex;
+  text-align: start;
+  padding-left: 10px;
+  height: 58px;
+  color: rgb(107 114 128);
+  background-color: rgb(238, 238, 238);
+  box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
+}
+
+input.multiselect {
+  display: flex;
+  text-align: start;
   height: 100%;
-  color: lavenderblush;
-  box-shadow: rgba(53, 73,88, 0.95) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  color: black;
+  height: 25px;
 }
 
-.textarea-mdc--panel.textareapanel{
-  background-color: rgb(55, 65, 81);
-  border-radius: 5px;
-  width: 195px;
-  border:  1x solid;
-  border-color: coral;
-  overflow-y: hidden;
-  max-height: 24px;
+input.multiselect:focus {
+  display: flex;
+  text-align: start;
+  height: 100%;
+  height: 25px;
+  color: rgb(107 114 128);
+  background-color: rgb(238, 238, 238);
+  box-shadow: rgba(14, 63, 126, 0.06) 0px 0px 0px 1px, rgba(42, 51, 70, 0.03) 0px 1px 1px -0.5px, rgba(42, 51, 70, 0.04) 0px 2px 2px -1px, rgba(42, 51, 70, 0.04) 0px 3px 3px -1.5px, rgba(42, 51, 70, 0.03) 0px 5px 5px -2.5px, rgba(42, 51, 70, 0.03) 0px 10px 10px -5px, rgba(42, 51, 70, 0.03) 0px 24px 24px -8px;
 }
 
-.mat-mdc-menu-panel.trigger{
-  color: white;
-}
 
 
 .button_app {
@@ -140,7 +148,12 @@ html {
   font-size: 16px;
   font-weight: 400;
   border-radius: 6px;
-  background-image: linear-gradient(180deg, var(--mainOne-color-dce2f2), var(--mainThree-color-f4f4fc) 400%, var(--mainTwo-color-a2bddc));
+  background-image: linear-gradient(
+    180deg,
+    var(--mainOne-color-dce2f2),
+    var(--mainThree-color-f4f4fc) 400%,
+    var(--mainTwo-color-a2bddc)
+  );
   box-shadow: 0px 0px 2px 2px var(--boxShadowOne-color-a3bfd9);
   padding: 10px;
   margin: 10px;
