develop hoover details

--- a/src/app/features/sidebar/sidebar.component.html
+++ b/src/app/features/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
       <div
         class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 cursor-pointer component_row_hover"
         [ngClass]="{ component_row: isInquiryDetail && isComponentInquiryHoover }"
-        (click)="showComponent('inquiryDetail')"
+        (click)="showComponent('isInquiryDetail')"
       >
         <div class="flex flex-row items-center gap-2 h-6 pt-1">
           <img src="../assets/images/side-bar/inquiry.svg" width="22" height="25" class="" alt="" />
@@ -59,7 +59,7 @@
       <div
         class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 component_row_hover"
         [ngClass]="{ component_row: isTableDetail && isComponentTableHoover }"
-        (click)="showComponent('tableDetail')"
+        (click)="showComponent('isTableDetail')"
       >
         <div class="flex flex-row items-center gap-2 h-6 pt-1">
           <img src="../assets/images/side-bar/tables.svg" width="22" height="30" class="" alt="" />
@@ -91,10 +91,14 @@
           }
         </ul>
       }
-      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 hoover_item">
-        <div class="flex flex-row items-center gap-2 h-6 pt-1">
+      <div class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 component_row_hover"
+      [ngClass]="{ component_row: isChartsDetail && isComponentChartsHover }"
+      (click)="showComponent('isChartsDetail')">
+        <div class="flex flex-row items-center gap-2 h-6 pt-1"
+       >
           <img src="../assets/images/side-bar/charts.svg" width="22" height="30" class="" alt="" />
           <span class="font-normal text-sm w-full">Charts</span>
+          
         </div>
         <svg
           class="h-6 w-4 pt-1 text-black"
@@ -107,7 +111,22 @@
         >
           <polyline points="6 9 12 15 18 9" />
         </svg>
+       
       </div>
+      @if (isChartsDetail) {
+        <ul class="text-sm">
+          @for (detail of chartsList; track $index) {
+            <li
+              class="li_hover mt-1 w-64 rounded"
+              [ngClass]="{ li_details: detail.id == componentChartsId && isComponentChartsHover}"
+              (click)="setDetail('inquiry', $index + 1)"
+            >
+              <span>{{ detail.text }}</span>
+            </li>
+          }
+        </ul>
+      }
+    
       <div
       class="col-start-1 flex flex-row gap-16 justify-between mr-4 rounded mt-1 h-7 cursor-pointer component_row_hover"
       [ngClass]="{ component_row: isComponentUser && isComponentUserHoover }"
